Moved C172Sv0 and C172Xv0 to separate files, some improvements to plotting functionality

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -4,21 +4,6 @@ This example shows how to set up and run an interactive aircraft simulation. You
 control it through the built-in GUI and, optionally, use the free X-Plane 12 demo for 3D
 visualization.
 
-!!! warning "Configuring Julia for Multithreading"
-
-    When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle
-    the simulation loop, the built-in GUI and any attached I/O devices. Therefore, to work through this
-    example you will need to start Julia with multiple threads enabled. You can find out how to do this in
-    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
-    Julia extension for VS Code, the easiest way is to add the following entry to your
-    ```settings.json``` (the ```auto``` setting will work well for most modern CPUs):
-
-    ```json
-    "julia.additionalArgs": [
-        "--threads=auto",
-    ],
-    ```
-
 ### Setting Up X-Plane 12
 
 Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). If you
@@ -26,7 +11,7 @@ happen to have the full version, you can use it instead. Since we will be using 
 external visualization tool, we only need to set up a few things; for further help, check out the
 [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
-!!! note "No X-Plane?"
+!!! note "No X-Plane"
 
     If you can't run X-Plane 12 (which might happen for instance if you have an Intel integrated
     graphics chip), you can skip this section. Your visuals will be limited to the built-in GUI, but
@@ -67,12 +52,36 @@ This concludes our X-Plane setup, now let's move on to Julia.
 
 ### Setting Up the ```Flight.jl``` Simulation
 
-First, let's initialize the package:
+!!! warning "Configuring Julia for Multithreading"
+
+    When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle
+    the simulation loop, the built-in GUI and any attached I/O devices. Therefore, to work through this
+    example you will need to start Julia with multiple threads enabled. You can find out how to do this in
+    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
+    Julia extension for VS Code, the easiest way is to add the following entry to your
+    ```settings.json```:
+
+    ```json
+    "julia.additionalArgs": [
+        "--threads=auto",
+    ],
+    ```
+
+    This should work well for most modern CPUs. If you have issues running the
+    simulation, try setting the number of threads manually to 4 or higher:
+
+    ```json
+    "julia.additionalArgs": [
+        "--threads=4",
+    ],
+    ```
+
+Let's begin by initializing the package:
 ```@example ex01
 using Flight
 ```
 
-Next, we define a 2D location and orthometric elevation for the beginning of Salzburg airport's
+Next, we need to define a 2D location and orthometric elevation for the beginning of Salzburg airport's
 runway 15, as well as the runway's geographic heading:
 ```@example ex01
 loc_LOWS15 = LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997))
@@ -139,11 +148,11 @@ nothing # hide
     nothing # hide
     ```
 
-The ```Flight.jl``` framework provides a joystick interface layer via [SDL2_jll]
+```Flight.jl``` provides basic joystick support via [SDL2_jll]
 (https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
-implemented model. Adding support for other joysticks is relatively straightforward, but we will not
-get into it here. If you happen to have a T.16000M available, you can plug it in now and do the
-following:
+implemented model. Adding support for other joysticks should be relatively straightforward, but we
+will not get into it here. If you happen to have a T.16000M available, you can plug it in now and do
+the following:
 
 ```@example ex01
 for joystick in update_connected_joysticks()
@@ -151,16 +160,16 @@ for joystick in update_connected_joysticks()
 end
 ```
 
-Otherwise, don't worry; in this example, you can let the SAS and autopilot modes handle the aircraft
-for you, so you can easily control it through the GUI.
+Otherwise, don't worry; in this example, you can let the SAS and autopilot modes handle the flying
+for you, so you can easily control the aircraft through the GUI.
 
 The last step is to define a suitable initial condition. For on-ground initialization, we can do
-that by specifying the aircraft's body frame kinematic state:
+that by specifying the aircraft's frame kinematic state:
 
 ```@example ex01
 init_gnd = KinInit(;
     loc = loc_LOWS15, #2D location
-    h = h_LOWS15 + C172.Δh_to_gnd, #altitude, as an offset with respect to ground elevation
+    h = h_LOWS15 + C172.Δh_to_gnd, #altitude, as an offset with respect to terrain elevation
     q_nb = REuler(ψ_LOWS15, 0, 0), #attitude with respect to NED frame, as Euler angles
     ω_wb_b = zeros(3), #angular velocity with respect to local tangent frame, aircraft frame coordinates
     v_eb_n = zeros(3), #Earth-relative velocity, NED frame coordinates
