--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -11,7 +11,7 @@ happen to have the full version, you can use it instead. Since we will be using 
 external visualization tool, we only need to set up a few things; for further help, check out the
 [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
-!!! note "No X-Plane"
+!!! note "Without X-Plane"
 
     If you can't run X-Plane 12 (which might happen for instance if you have an Intel integrated
     graphics chip), you can skip this section. Your visuals will be limited to the built-in GUI, but
@@ -93,7 +93,7 @@ nothing # hide
 !!! note "Keeping Appearances"
 
     These values will result in X-Plane displaying the aircraft properly positioned and aligned
-    on the runway centerline at the beginning of the simulation. However, this is just for appearance,
+    on the runway centerline at the beginning of the simulation. However, this is just for aesthetics,
     since our simulation's physics are totally independent from X-Plane's terrain mesh. This disconnect will
     become apparent as soon as the aircraft starts rolling down the runway.
 
@@ -161,7 +161,7 @@ end
 ```
 
 Otherwise, don't worry; in this example, you can let the SAS and autopilot modes handle the flying
-for you, so you can easily control the aircraft through the GUI.
+for you, which makes it easy to control the aircraft through the GUI.
 
 The last step is to define a suitable initial condition. For on-ground initialization, we can do
 that by specifying the aircraft's frame kinematic state:
@@ -182,19 +182,26 @@ And then we assign it as:
 Sim.init!(sim, init_gnd)
 ```
 
-Now we can finally start the simulation.
-
 ### Running the Simulation
 
+We are now finally ready to start the simulation.
 ```julia
 Sim.run_interactive!(sim)
 ```
+
+After a few seconds, the simulation will start and the main GUI window will open.
+How to abort, pause
 
 !!! note "Demo Time Limit"
 
     The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
     get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
-    abort the Julia simulation and run it again (we will see how to do this shortly).
+    abort the Julia simulation, reset it and run it again:
+
+    ```julia
+    Sim.init!(sim, init_gnd)
+    Sim.run_interactive!(sim)
+    ```
 
 **TODO: Maybe add on-air initialization**
 
