Some progress in example 01

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -120,11 +120,15 @@ customizable sea-level conditions and wind velocity. ```HorizontalTerrain``` is 
 constant orthometric elevation, which we have set to our previous value for the beginning of runway
 15\.
 
-Now we can create our simulation, specifying a suitable integration step size:
+Now we can create our simulation with a suitable integration step size:
 ```@example ex01
 sim = Simulation(world; dt = 0.01)
 nothing # hide
 ```
+
+Under the hood, the call to the ```Simulation``` constructor will use our ```SimpleWorld```
+instance as a blueprint for constructing a runnable ```System```, which is what will actually get
+simulated.
 
 Next, we instantiate an X-Plane 12 control interface and attach it to the simulation. This will
 allow the simulation to disable X-Plane's physics engine and periodically send our aircraft's state
@@ -184,25 +188,53 @@ Sim.init!(sim, init_gnd)
 
 ### Running the Simulation
 
-We are now finally ready to start the simulation.
+Now we can finally run the simulation as follows:
 ```julia
 Sim.run_interactive!(sim)
 ```
 
-After a few seconds, the simulation will start and the main GUI window will open.
-How to abort, pause
+After a few seconds, the simulation will launch and a new OS window containing the built-in GUI will
+open:
 
-!!! note "Demo Time Limit"
+![Default GUI](gui_01.png)
+
+The first window is the simulation control panel, which lets you pause the simulation and set its
+pace relative to wall clock time. The second one is specific to the simulated ```System```.
+
+A complex ```System``` (like ours) comprises a hierarchy of components. Each component is itself a
+```System``` and typically defines its own GUI window, which can be accessed from that of its
+parent. Feel free to explore the GUI to get a picture of the underlying component hierarchy and
+discover different ways of interacting with the simulation.
+
+To abort the simulation, simply close the GUI's OS window.
+
+!!! tip "GUI State"
+
+    GUI windows can be moved, resized or docked as desired. GUI state is saved in a file named
+    **imgui.ini**, which is automatically created in the project's root folder.  Deleting this file
+    will restore the GUI to its default state.
+
+Let's get back to X-Plane for a moment. You should now see the aircraft sitting on the runway *with
+the engine stopped*. This indicates that the X-Plane interface was set up properly and the simulation
+has taken control of the visuals.
+
+![X-Plane 12 Network Settings](xp12_network_settings.png)
+
+!!! note "X-Plane 12 Demo Time Limit"
 
     The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
     get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
-    abort the Julia simulation, reset it and run it again:
+    abort the simulation, reset it and run it again:
 
     ```julia
     Sim.init!(sim, init_gnd)
     Sim.run_interactive!(sim)
     ```
 
+Now, open the *Aircraft > Avionics > Flight Control* window. Expand the *Engine* section
+
+REPLACE SCREENSHOT
+
 **TODO: Maybe add on-air initialization**
 
-**TODO: Installation notes on dedicated documentation section. Mention Revise**
+**TODO: Installation notes on dedicated section. Mention Revise**
