Replaced bad example screenshot

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -201,8 +201,8 @@ open:
 The first window is the simulation control panel, which lets you pause the simulation and set its
 pace relative to wall clock time. The second one is specific to the simulated ```System```.
 
-A complex ```System``` (like ours) comprises a hierarchy of components. Each component is itself a
-```System``` and typically defines its own GUI window, which can be accessed from that of its
+A complex ```System``` like ours comprises a hierarchy of components. Each component is itself a
+```System```, and it typically defines its own GUI window, which can be accessed from that of its
 parent. Feel free to explore the GUI to get a picture of the underlying component hierarchy and
 discover different ways of interacting with the simulation.
 
