A few changes to example 01

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -120,15 +120,15 @@ customizable sea-level conditions and wind velocity. ```HorizontalTerrain``` is 
 constant orthometric elevation, which we have set to our previous value for the beginning of runway
 15\.
 
-Now we can create our simulation with a suitable integration step size:
+Now we can create our simulation:
 ```@example ex01
-sim = Simulation(world; dt = 0.01)
+sim = Simulation(world; dt = 0.01) #specifies a suitable integration step size
 nothing # hide
 ```
 
-Under the hood, the call to the ```Simulation``` constructor will use our ```SimpleWorld```
-instance as a blueprint for constructing a runnable ```System```, which is what will actually get
-simulated.
+Under the hood, this call uses our ```SimpleWorld``` instance as a blueprint to construct a
+```System```, which is what the ```Simulation``` will actually interact with. The ```System``` type
+is central to the ```Flight.jl``` framework, and we will look into it in future examples.
 
 Next, we instantiate an X-Plane 12 control interface and attach it to the simulation. This will
 allow the simulation to disable X-Plane's physics engine and periodically send our aircraft's state
