And some more tweaks...

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -188,29 +188,30 @@ Sim.init!(sim, init_gnd)
 
 ### Running the Simulation
 
-Now we can finally run the simulation as follows:
+Now we can finally start the simulation:
 ```julia
 Sim.run_interactive!(sim)
 ```
 
-After a few seconds, the simulation will launch and a new OS window containing the built-in GUI will
-open:
+After a few seconds, the simulation will launch, and a new OS window containing the built-in GUI
+will open:
 
 ![Default GUI](gui_01.png)
 
-The first window is the simulation control panel, which lets you pause the simulation and set its
-pace relative to wall clock time. The second one is specific to the simulated ```System```.
+The panel above provides basic simulation controls. You can use it to pause or resume the
+simulation and set its pace relative to wall clock time.
 
-A complex ```System``` like ours comprises a hierarchy of components. Each component is itself a
-```System```, and it typically defines its own GUI window, which can be accessed from that of its
-parent. Feel free to explore the GUI to get a picture of the underlying component hierarchy and
-discover different ways of interacting with the simulation.
+The panel below is specific to the simulated ```System```. A complex ```System``` comprises a
+hierarchy of components. Each component is itself a ```System```, and it typically defines its own
+GUI panel, which can be accessed from that of its parent. Feel free to explore the GUI to get a
+picture of the underlying component hierarchy and discover different ways of interacting with the
+simulation.
 
-To abort the simulation, simply close the GUI's OS window.
+To abort the simulation, simply close the main GUI window.
 
 !!! tip "GUI State"
 
-    GUI windows can be moved, resized or docked as desired. GUI state is saved in a file named
+    GUI panels can be moved, resized or docked as desired. GUI state is saved in a file named
     **imgui.ini**, which is automatically created in the project's root folder.  Deleting this file
     will restore the GUI to its default state.
 
@@ -231,7 +232,7 @@ has taken control of the visuals.
     Sim.run_interactive!(sim)
     ```
 
-Now, open the *Aircraft > Avionics > Flight Control* window. Expand the *Engine* section
+Now, open the *Aircraft > Avionics > Flight Control* panel. Expand the *Engine* section
 
 REPLACE SCREENSHOT
 
