Progress in ex01.md

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -90,9 +90,9 @@ h_LOWS15 = HOrth(427.2)
 nothing # hide
 ```
 
-!!! note "Keeping Appearances"
+!!! note "A Caveat On X-Plane Visuals"
 
-    These values will result in X-Plane displaying the aircraft properly positioned and aligned
+    The above values will result in X-Plane displaying the aircraft properly positioned and aligned
     on the runway centerline at the beginning of the simulation. However, this is just for aesthetics,
     since our simulation's physics are totally independent from X-Plane's terrain mesh. This disconnect will
     become apparent as soon as the aircraft starts rolling down the runway.
@@ -211,11 +211,11 @@ To abort the simulation, simply close the main GUI window.
 
 !!! tip "GUI State"
 
-    GUI panels can be moved, resized or docked as desired. GUI state is saved in a file named
-    **imgui.ini**, which is automatically created in the project's root folder.  Deleting this file
-    will restore the GUI to its default state.
+    GUI panels can be moved, resized, tiled, docked or grouped as tabs. Try to find the layout that works
+    best for you. GUI state is saved in a file named **imgui.ini**, which is automatically created in
+    the project's root folder.  Deleting this file will restore the GUI to its default state.
 
-Let's get back to X-Plane for a moment. You should now see the aircraft sitting on the runway *with
+Let's return to X-Plane for a moment. You should now see the aircraft sitting on the runway *with
 the engine stopped*. This indicates that the X-Plane interface was set up properly and the simulation
 has taken control of the visuals.
 
@@ -232,7 +232,7 @@ has taken control of the visuals.
     Sim.run_interactive!(sim)
     ```
 
-Now, open the *Aircraft > Avionics > Flight Control* panel. Expand the *Engine* section
+Back in the GUI, open the *Aircraft > Avionics > Flight Control* panel. Expand the *Engine* section
 
 REPLACE SCREENSHOT
 
