--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -128,7 +128,7 @@ nothing # hide
 
 Under the hood, this call uses our ```SimpleWorld``` instance as a blueprint to construct a
 ```System```, which is what the ```Simulation``` will actually interact with. The ```System``` type
-is central to the ```Flight.jl``` framework, and we will look into it in future examples.
+is central to the ```Flight.jl``` framework, and we will look into it further in future examples.
 
 Next, we instantiate an X-Plane 12 control interface and attach it to the simulation. This will
 allow the simulation to disable X-Plane's physics engine and periodically send our aircraft's state
@@ -196,18 +196,17 @@ Sim.run_interactive!(sim)
 After a few seconds, the simulation will launch, and a new OS window containing the built-in GUI
 will open:
 
-![Default GUI](gui_01.png)
+![Default GUI](gui_default.png)
 
-The panel above provides basic simulation controls. You can use it to pause or resume the
-simulation and set its pace relative to wall clock time.
+The first panel provides basic simulation controls. You can use it to pause or resume the
+simulation, and set its pace relative to wall clock time. To abort the simulation, simply close the
+main GUI window.
 
-The panel below is specific to the simulated ```System```. A complex ```System``` comprises a
-hierarchy of components. Each component is itself a ```System```, and it typically defines its own
-GUI panel, which can be accessed from that of its parent. Feel free to explore the GUI to get a
-picture of the underlying component hierarchy and discover different ways of interacting with the
-simulation.
-
-To abort the simulation, simply close the main GUI window.
+The second panel is specific to the simulated ```System```. A complex ```System``` like ours
+comprises a hierarchy of components. Each component is itself a ```System```, and it typically
+defines its own GUI panel, which can be accessed from that of its parent. You can explore the GUI to
+get a picture of the underlying component hierarchy and discover different ways of interacting with
+the simulation.
 
 !!! tip "GUI State"
 
@@ -215,11 +214,11 @@ To abort the simulation, simply close the main GUI window.
     best for you. GUI state is saved in a file named **imgui.ini**, which is automatically created in
     the project's root folder.  Deleting this file will restore the GUI to its default state.
 
-Let's return to X-Plane for a moment. You should now see the aircraft sitting on the runway *with
-the engine stopped*. This indicates that the X-Plane interface was set up properly and the simulation
-has taken control of the visuals.
+Let's get back to X-Plane for a moment. You should now see the aircraft sitting on the runway *with
+the engine stopped*. This indicates that the X-Plane interface was set up properly and our
+simulation has taken control of the visuals.
 
-![X-Plane 12 Network Settings](xp12_network_settings.png)
+![X-Plane 12 Simulation Started](xp12_sim_start.png)
 
 !!! note "X-Plane 12 Demo Time Limit"
 
@@ -232,9 +231,57 @@ has taken control of the visuals.
     Sim.run_interactive!(sim)
     ```
 
-Back in the GUI, open the *Aircraft > Avionics > Flight Control* panel. Expand the *Engine* section
+Now return to the GUI and navigate to the *Aircraft > Avionics > Flight Control* panel. Expand the
+*Engine* section. Set the *Mixture* slider to around 0.5. Then, press and hold the *Engine Start*
+button to start the engine.
 
-REPLACE SCREENSHOT
+Next, expand the *Longitudinal Control* and *Lateral Control* sections. Under *Longitudinal
+Control*, select the *Throttle + Pitch SAS* control mode. Under *Lateral Control*, select the *SAS*
+lateral control mode. The buttons will change to amber, indicating the modes are preselected but not
+active. They will engage automatically upon lift off.
+
+![Flight Control GUI](gui_flight_control.png)
+
+That is all we really need to set up for take off. We will not bother with minutiae like keeping
+the aircraft centered on the runway or rotating. When you're ready, just move the *Throttle Input*
+slider all the way to the right and let the aircraft go.
+
+Once in the air, the SAS modes will keep everything under control. You can experiment with the
+primary control sliders (throttle, elevator, aileron, rudder) sliders, or.
+
+Note: If you have a supported joystick attached, the throttle and control surface sliders in the GUI
+will be overridden by the corresponding joystick axes.
+
+different autopilot modes. Here is a brief description of what's available:
+
+Longitudinal:
+
+Throttle + Pitch SAS: Combines direct throttle control with a pitch stability augmentation loop that
+tames the short-period and phugoid modes. Active inputs: *Throttle Input* and *Elevator Input*
+
+For more information on ```Cessna172Xv1```'s flight control system, you can check out the source
+code and the notebooks in (internal LINKS, see Documenter.jl), which document the design process
+from scratch.
+
+---
+
+Brief description of autopilot modes and altitude guidance. Which commands are active in
+each case.
+
+
+
+
+!!! tip "Keyboard Input for Sliders"
+
+    To assign a precise value to a control slider, use Ctrl+Click (on Windows)
+    or Cmd+click (on Mac) to enable keyboard input.
+
+
+Notes: To avoid transients, when a new autopilot mode is engaged, its command variables will be
+automatically set to their current values.
+
+
+
 
 **TODO: Maybe add on-air initialization**
 
