--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -246,41 +246,12 @@ That is all we really need to set up for take off. We will not bother with minut
 the aircraft centered on the runway or rotating. When you're ready, just move the *Throttle Input*
 slider all the way to the right and let the aircraft go.
 
-Once in the air, the SAS modes will keep everything under control. You can experiment with the
-primary control sliders (throttle, elevator, aileron, rudder) sliders, or.
-
-Note: If you have a supported joystick attached, the throttle and control surface sliders in the GUI
-will be overridden by the corresponding joystick axes.
-
-different autopilot modes. Here is a brief description of what's available:
-
-Longitudinal:
-
-Throttle + Pitch SAS: Combines direct throttle control with a pitch stability augmentation loop that
-tames the short-period and phugoid modes. Active inputs: *Throttle Input* and *Elevator Input*
-
-For more information on ```Cessna172Xv1```'s flight control system, you can check out the source
-code and the notebooks in (internal LINKS, see Documenter.jl), which document the design process
-from scratch.
-
----
-
-Brief description of autopilot modes and altitude guidance. Which commands are active in
-each case.
-
-
-
+Once in the air, the SAS modes will keep the aircraft under control.
 
 !!! tip "Keyboard Input for Sliders"
 
     To assign a precise value to a control slider, use Ctrl+Click (on Windows)
     or Cmd+click (on Mac) to enable keyboard input.
-
-
-Notes: To avoid transients, when a new autopilot mode is engaged, its command variables will be
-automatically set to their current values.
-
-
 
 
 **TODO: Maybe add on-air initialization**
