Some minor changes to Flight Control GUI panel, more work on ex01

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -198,11 +198,10 @@ will open:
 
 ![Default GUI](gui_default.png)
 
-The first panel provides basic simulation controls. You can use it to pause or resume the
-simulation, and set its pace relative to wall clock time. To abort the simulation, simply close the
-main GUI window.
+The *Simulation Control* panel lets you pause or resume the simulation, and set its pace relative to
+wall clock time. To abort the simulation, simply close the GUI window.
 
-The second panel is specific to the simulated ```System```. A complex ```System``` like ours
+The other panel is specific to our simulated ```System```. A complex ```System``` like this one
 comprises a hierarchy of components. Each component is itself a ```System```, and it typically
 defines its own GUI panel, which can be accessed from that of its parent. You can explore the GUI to
 get a picture of the underlying component hierarchy and discover different ways of interacting with
@@ -231,28 +230,50 @@ simulation has taken control of the visuals.
     Sim.run_interactive!(sim)
     ```
 
-Now return to the GUI and navigate to the *Aircraft > Avionics > Flight Control* panel. Expand the
-*Engine* section. Set the *Mixture* slider to around 0.5. Then, press and hold the *Engine Start*
+Now return to the GUI and navigate to *Aircraft > Avionics > Flight Control*. Expand the
+*Engine* header. Set the *Mixture* slider to around 0.5. Then, press and hold the *Engine Start*
 button to start the engine.
 
-Next, expand the *Longitudinal Control* and *Lateral Control* sections. Under *Longitudinal
-Control*, select the *Throttle + Pitch SAS* control mode. Under *Lateral Control*, select the *SAS*
-lateral control mode. The buttons will change to amber, indicating the modes are preselected but not
-active. They will engage automatically upon lift off.
-
-![Flight Control GUI](gui_flight_control.png)
-
-That is all we really need to set up for take off. We will not bother with minutiae like keeping
-the aircraft centered on the runway or rotating. When you're ready, just move the *Throttle Input*
-slider all the way to the right and let the aircraft go.
-
-Once in the air, the SAS modes will keep the aircraft under control.
-
-!!! tip "Keyboard Input for Sliders"
+!!! tip "Keyboard Input"
 
     To assign a precise value to a control slider, use Ctrl+Click (on Windows)
     or Cmd+click (on Mac) to enable keyboard input.
 
+Next, expand the *Longitudinal Control* and *Lateral Control* headers. The longitudinal control
+channel computes throttle and elevator commands. The lateral control channel computes aileron and
+rudder commands. Both channels are initially in *Direct* mode. In this mode, each actuator command
+is directly set to the sum of its corresponding *Axis* and *Offset* values. With *Direct* mode
+active in both channels, you are essentially flying the base Cessna 172S model, except for the
+additional actuator dynamics.
+
+Select the *Throttle + Pitch SAS* longitudinal control mode. The button will change to amber,
+indicating the mode is now on standby. It will engage automatically upon lift off. In this mode,
+direct throttle control is maintained, but elevator input is fed through a pitch compensator, which
+computes the actual elevator commands. The pitch SAS changes the natural short-period and phugoid
+modes, providing a smoother, more stable pitch response.
+
+Select the *SAS* lateral control mode. In this mode, both aileron and rudder inputs are fed through
+a lateral-directional compensator, which computes the actual aileron and rudder commands. The
+lateral SAS improves the Dutch roll response and stabilizes the naturally unstable spiral mode.
+
+![Take-Off GUI](gui_take_off.png)
+
+You can try moving the control surfaces and observe the result on the GUI's numerical displays or an
+external X-Plane view. When you are done, set all *Axis* and *Offset* values back to zero.
+
+!!! note "Joystick Override"
+
+    If you have a joystick attached, the *Axis* sliders will be overridden
+    by the corresponding joystick axes.
+
+That is all we really need to set up for take off. We won't bother with flap settings, rotation or
+even keeping the aircraft centered on the runway (which in our simulation doesn't actually exist!).
+When you're ready, just set the *Throttle Input* all the way to 1 and let the aircraft accelerate
+and lift off on its own.
+
+---
+
+Note, however, that this mode does not provide automatic turn compensation.
 
 **TODO: Maybe add on-air initialization**
 
