More ex01 content

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -230,50 +230,86 @@ simulation has taken control of the visuals.
     Sim.run_interactive!(sim)
     ```
 
-Now return to the GUI and navigate to *Aircraft > Avionics > Flight Control*. Expand the
-*Engine* header. Set the *Mixture* slider to around 0.5. Then, press and hold the *Engine Start*
-button to start the engine.
+Now return to the GUI and navigate to *Aircraft > Avionics > Flight Control*. This panel contains
+all the flight control inputs and instrumentation for the ```Cessna172Xv1``` model.
 
-!!! tip "Keyboard Input"
+First, expand the *Engine* section. Set the *Mixture* slider to around 0.5. Then, press and hold the
+*Engine Start* button to start the engine.
 
-    To assign a precise value to a control slider, use Ctrl+Click (on Windows)
-    or Cmd+click (on Mac) to enable keyboard input.
-
-Next, expand the *Longitudinal Control* and *Lateral Control* headers. The longitudinal control
+Next, expand the *Longitudinal Control* and *Lateral Control* sections. The longitudinal control
 channel computes throttle and elevator commands. The lateral control channel computes aileron and
-rudder commands. Both channels are initially in *Direct* mode. In this mode, each actuator command
-is directly set to the sum of its corresponding *Axis* and *Offset* values. With *Direct* mode
-active in both channels, you are essentially flying the base Cessna 172S model, except for the
-additional actuator dynamics.
+rudder commands. Both are initialized in *Direct* mode, wherein each actuator command is set
+directly to the sum of its corresponding *Axis* and *Offset* values. With *Direct* mode active on
+both channels, you are essentially flying the base Cessna 172S model, except for the additional
+actuator dynamics.
 
-Select the *Throttle + Pitch SAS* longitudinal control mode. The button will change to amber,
-indicating the mode is now on standby. It will engage automatically upon lift off. In this mode,
-direct throttle control is maintained, but elevator input is fed through a pitch compensator, which
-computes the actual elevator commands. The pitch SAS changes the natural short-period and phugoid
-modes, providing a smoother, more stable pitch response.
-
-Select the *SAS* lateral control mode. In this mode, both aileron and rudder inputs are fed through
-a lateral-directional compensator, which computes the actual aileron and rudder commands. The
-lateral SAS improves the Dutch roll response and stabilizes the naturally unstable spiral mode.
-
-![Take-Off GUI](gui_take_off.png)
-
-You can try moving the control surfaces and observe the result on the GUI's numerical displays or an
-external X-Plane view. When you are done, set all *Axis* and *Offset* values back to zero.
+Try moving the control surfaces using the *Axis* and *Offset* inputs, and observe the result on the
+GUI's numerical displays or an external X-Plane camera. When you are done, remember to reset all
+values back to zero.
 
 !!! note "Joystick Override"
 
     If you have a joystick attached, the *Axis* sliders will be overridden
     by the corresponding joystick axes.
 
+!!! tip "Keyboard Input"
+
+    To assign a precise value to a control slider, use Ctrl+Click (on Windows)
+    or Cmd+click (on Mac) to enable keyboard input.
+
+Under *Longitudinal Control*, select the *Pitch SAS* mode. In this mode, direct throttle
+control is preserved, but elevator inputs are fed to a pitch compensator, which computes the actual
+elevator actuator commands. The pitch compensator modifies the natural short-period and phugoid
+modes, providing a smoother, more stable pitch response. When clicked, the button will turn amber,
+indicating the mode is now on standby; it will engage automatically upon lift off.
+
+Under *Lateral Control*, select the *Roll/Yaw SAS* mode, which will also be put on standby. In this
+mode, both aileron and rudder inputs are fed to a MIMO lateral compensator, which computes aileron
+and rudder actuator commands. This improves the aircraft's Dutch roll response and stabilizes its
+naturally unstable spiral mode.
+
+Currently, the GUI does not have a graphical instrument panel. Instead, the *Flight Data* section
+provides readouts for all essential variables. This will be particularly useful if you're running
+the example without X-Plane.
+
+SHOW SCREENSHOT WITH FLIGHT DATA EXPANDED
+
+![Take-Off GUI](gui_take_off.png)
+
 That is all we really need to set up for take off. We won't bother with flap settings, rotation or
-even keeping the aircraft centered on the runway (which in our simulation doesn't actually exist!).
-When you're ready, just set the *Throttle Input* all the way to 1 and let the aircraft accelerate
-and lift off on its own.
+even keeping the aircraft centered on the runway (which, as far as our simulation is concerned,
+doesn't actually exist!). When you're ready, just set the *Throttle Input* all the way to 1 and let
+the aircraft accelerate and lift off on its own.
+
+Once airborne, you will see the selected modes change from amber to green. Let the aircraft climb
+for a while to give yourself some ground clearance. Then, spend some time flying with the SAS modes
+enabled. When you feel comfortable with the controls, try switching back and forth between the
+*Direct* and *Pitch SAS* modes and compare the aircraft's response to elevator input. You can do the
+same with the *Direct* and *Roll/Yaw SAS* modes, but be careful with that unstable spiral mode!
+
+Next, switch to *EAS + Pitch Angle* mode. This one combines an autothrottle loop that tracks
+equivalent airspeed with a pitch angle loop built around the pitch SAS. Activating this mode will
+disable all *Throttle* and *Elevator* inputs and enable the *Equivalent Airspeed* and *Pitch Angle*
+sliders. The numerical readout to the right of each slider shows the current value of the its target
+variable. In most cases, when a new control mode is engaged, its target variables will be
+automatically set to their current values to ensure a smooth transition.
+
+When you are done experimenting, feel free to try the rest of the higher level longitudinal modes.
+If you crash, just reset the simulation and have another go:
+```julia
+Sim.init!(sim, init_gnd)
+Sim.run_interactive!(sim)
+```
+
+You may have noticed that the *Roll/Yaw SAS* mode does not provide automatic turn compensation. For
+this, we need to enable one of the higher level lateral modes, all of which provide sideslip angle
+tracking. For example, let's try the *Bank Angle + AoS* mode.
+
+For more information on ```Cessna172Xv1```'s flight control system, you can check out the source
+code and the notebooks in (internal LINKS, see Documenter.jl), which document the design process
+from scratch.
 
 ---
-
-Note, however, that this mode does not provide automatic turn compensation.
 
 **TODO: Maybe add on-air initialization**
 
