Added PayloadY and replaced PayloadU in TrimParameters and C172.Init, implemented init! methods for C172 Components

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -285,21 +285,21 @@ Once airborne, you will see the selected modes change from amber to green. Let t
 for a while to give yourself some ground clearance. Then, spend some time flying with the SAS modes
 enabled. When you feel comfortable with the controls, try switching back and forth between the
 *Direct* and *Pitch SAS* modes and compare the aircraft's response to elevator input. You can do the
-same with the *Direct* and *Roll/Yaw SAS* modes, but be careful with that unstable spiral mode!
-
-Next, switch to *EAS + Pitch Angle* mode. This one combines an autothrottle loop that tracks
-equivalent airspeed with a pitch angle loop built around the pitch SAS. Activating this mode will
-disable all *Throttle* and *Elevator* inputs and enable the *Equivalent Airspeed* and *Pitch Angle*
-sliders. The numerical readout to the right of each slider shows the current value of the its target
-variable. In most cases, when a new control mode is engaged, its target variables will be
-automatically set to their current values to ensure a smooth transition.
-
-When you are done experimenting, feel free to try the rest of the higher level longitudinal modes.
-If you crash, just reset the simulation and have another go:
+same with the *Direct* and *Roll/Yaw SAS* modes, but be careful with that unstable spiral mode! If
+you crash, just reset the simulation and have another go:
 ```julia
 Sim.init!(sim, init_gnd)
 Sim.run_interactive!(sim)
 ```
+
+Next, switch to *EAS + Pitch Angle* mode. This one combines an autothrottle loop that tracks
+equivalent airspeed with a pitch angle loop built around the pitch SAS. Activating this mode will
+disable all *Throttle* and *Elevator* inputs and enable the *Equivalent Airspeed* and *Pitch Angle*
+sliders. The numerical readout to the right of each slider shows the current value of its target
+variable. In most cases, when a new control mode is engaged, its target variables will be
+automatically set to their current values to ensure a smooth transition.
+
+When you are done experimenting, feel free to try the rest of the higher level longitudinal modes.
 
 You may have noticed that the *Roll/Yaw SAS* mode does not provide automatic turn compensation. For
 this, we need to enable one of the higher level lateral modes, all of which provide sideslip angle
